--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,8 @@ python-dateutil==2.9.0.post0
 pytransform3d==3.14.0
 scipy==1.15.3
 six==1.17.0
-darkdetect>=0.8.0
+darkdetect==0.8.0
+streamlit==1.45.1
+pandas==2.2.3
+PyYAML==6.0.2
+opencv-python==4.11.0.86
